# lens_editor

./: .gitignore  Compile_package.md  flake.nix  likou.py  readme.md  requirements.txt  setup.cfg  shell.nix
lens_editor/: app.py  config.py  defect.py  message_tip.py  minimap.py  pixmap.py  rule.py  rule_edit.py  search.py  thread.py  view.py  xml_parser.py
lens_editor/tests/: test_rule.py
