[metadata]
name = lens_editor
version = attr: lens_editor.VERSION
description = manipulate xml for yolov5
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    PySide6


[options.entry_points]
gui_scripts =
    lens_editor = lens_editor.app:main

[options.packages.find]
exclude =
    lens_editor.tests
    